# fast_zero_projeto_final

./: .dockerignore  .env-template  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
fast_zero_projeto_final/: app.py  database.py  sanitize.py  security.py
fast_zero_projeto_final/models/: contas.py  livros.py  registry.py  romancistas.py
fast_zero_projeto_final/romancistas/: checar_romancista.py
fast_zero_projeto_final/routers/: auth.py  contas.py  livros.py  romancistas.py
fast_zero_projeto_final/schemas/: contas.py  livros.py  mensagem.py  romancistas.py
migrations/: env.py
migrations/versions/: 51bacf12e08c_livros_e_romancistas.py  6f656f07992b_.py  973b2b0f0c0f_reset.py  b26bf325bc2f_contas.py
tests/: conftest.py  factories.py  test_db.py  test_sanitize.py  test_security.py
tests/cenarios/: test_gerenciamento_de_contas.py  test_gerenciamento_de_livros.py  test_gerenciamento_de_romancistas.py
tests/routers/: test_auth.py  test_contas.py  test_livros.py  test_romancistas.py
